<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReportIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="category_text">Category</string>
    <string name="search_text">Search</string>
    <string-array name="complaint_category">
        <item>Auto/Bus</item>
        <item>Bribe</item>
        <item>Garbage Collection</item>
        <item>Accident</item>
        <item>Fire</item>
        <item>Police</item>
        <item>Women Abuse</item>
        <item>Pet Care</item>
    </string-array>
    
    <string-array name="logas_category">
        <item>Anonymous</item>
        <item>Enter Information</item>
    </string-array>
    
    <string name="upload">Upload</string>
    <string name="location">Location</string>
    <string name="logas">Log As</string>
    <string name="dummyLocation">Dummy Location</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="total">Total Requests</string>
    <string name="completed">Completed</string>
    <string name="completedCount">10</string>
    
    <string name="totalCount">25</string>
    
    
</resources>
